# pomelo-dns

./: .gitattributes  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  numberic.html  pomelo.conf
debian/etc/logrotate.d/: pomelo
src/: cache.rs  handler.rs  lazy.rs  logs.rs  main.rs  pidfile.rs  ping.rs  server.rs
src/config/: group.rs  hosts.rs  log.rs  metadata.rs  mod.rs  resolution.rs  server.rs
src/logs/: log_writer.rs  mod.rs  seq_layer.rs
src/resolves/: default.rs  doh.rs  dot.rs  generic.rs  mod.rs
src/resolves/http/: h1.rs
