[package]
name = "pomelo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = { version = "0.25.0", features = ["early-data"] }
tokio-util = "0.7.10"
rustls = "0.22.2"
webpki-roots = "0.26.0"
anyhow = "1.0.79"
url = "2.5.0"
lru = "0.12.1"
quinn = "0.10.2"
hickory-proto = { version = "0.24.0" }
socket2 = "0.5.5"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "chrono"] }
chrono = "0.4.33"
futures-util = "0.3.30"
nu-ansi-term = "0.50.0"
maxminddb = "0.24.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
